# listmode-to-safir

./: README.md  install.sh
STIR-example/: 7mm_x10y0z0.clm.safir  FBP3DRP.par  JPET_test_file.hs  README.md  crystal_map_jpet.txt  listmode_input_JPET_SAFIR.par  lm_to_projdata.par
example/: README.md  get_files.sh  listmode_input_JPET_SAFIR.par  one_click_reconstruction.sh  template_sino_L020_7mm.hs  template_sino_L050_7mm.hs
example/templates/: template_sino_L020_4mm.hs  template_sino_L020_7mm.hs  template_sino_L050_4mm.hs  template_sino_L100_4mm.hs  template_sino_L100_7mm.hs
input/: JPETGeometry.par
src/: CMakeLists.txt  ConvertToMUPET.cxx  CrystalMapJPET.h  GenerateCrystalMapJPET.cxx  JPETHitEvent.h  JPETParameters.h  build_my_executables.sh
src/CrystalMap/: CrystalMapJPET.cxx  GenerateCrystalMapJPET.cxx
src/JPETParameters/: JPETParameters.cxx
src/LMDataController/: GenerateBlurredMUPET.cxx  LMDataController.cxx
src/MUPET/: .JPETHitEvent.cxx.swp  ConvertToMUPET.cxx  JPETHitEvent.cxx
src/include/: CListEventMUPET_simple.h  ConvertBlurredToSAFIR.inl  ConvertToSAFIR.cxx  CrystalMapJPET.h  JPETHitEvent.h  JPETParameters.h  LMDataController.h  LMDataController.inl
working_dir/: DOI_parameters.par  FBP3DRP.par  JPETGeometry.par  README.md  get_files.sh  lm_to_projdata.par  one_click_reconstruction.sh
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L020_4mm_10_00_07_short/: DOI_parameters.par  JPETGeometry.par  crystal_map_jpet.txt
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L020_4mm_10_00_07_short/PM/: PMT_data.clm.safir
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L020_4mm_10_00_07_short/SI/: SI_data.clm.safir  template_sino.hs
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L020_4mm_10_00_07_short/WL/: WLS_data.clm.safir  listmode_input_JPET_SAFIR.par
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L100_4mm_20_00_37_short/PM/: PMT_data.clm.safir  listmode_input_JPET_SAFIR.par  template_sino.hs
working_dir/OUTPUT_DATA/SAFIR_D85_1lay_L100_4mm_20_00_37_short/SI/: SI_data.clm.safir  listmode_input_JPET_SAFIR.par
working_dir/templates/: template_sino_L050_4mm.hs  template_sino_L050_7mm.hs  template_sino_L100_4mm.hs  template_sino_L100_7mm.hs
(+1 files in other folders)
